Removed section tags, fixed extra end tags, fixed centering on mobile, styled inputs

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,9 @@ textarea {
   height: 30px;
   border-radius: 8px;
   border: 2px solid var(--primary-color);
+  background-color: var(--dark-blue);
+  color: var(--primary-color);
+  text-align: center;
 }
 
 textarea {
@@ -96,9 +99,10 @@ textarea:focus,
 textarea::placeholder,
 input:focus,
 input::placeholder {
+  outline: none !important;
   color: var(--primary-color);
+  text-align: center;
 }
-
 
 footer {
   justify-content: flex-end;
@@ -108,12 +112,6 @@ footer {
   height: 50px;
   background-color: var(--dark-blue);
   padding: 0 30px;
-}
-
-.brand{
-  height: 50px;
-  border-radius: 50%;
-  margin: 0 5px;
 }
 
 .avatar-img {
@@ -143,8 +141,8 @@ footer {
   text-align: center;
 }
 
-
-.icons, .tech-stack-icon {
+.icons,
+.tech-stack-icon {
   height: 30px;
   border-radius: 50%;
   margin: 0 5px;
@@ -157,7 +155,7 @@ footer {
   filter: drop-shadow(0px 0px 8px var(--primary-color));
 }
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 900px) {
   main,
   section,
   article {
@@ -172,6 +170,16 @@ footer {
   .card {
     margin: 5px;
     padding: 10px;
+  }
+
+  .mobile-card {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .mobile-content {
+    width: 100%;
   }
 
   .project {
